Apply Json Serializable
