# app/Models/Pagination.php
@@ -6,18 +6,18 @@ use Illuminate\Support\Collection;
 use OpenApi\Attributes as OA;
 
 #[OA\Schema()]
-class PaginatedResponse
+class Pagination extends Model
 {
     public readonly int $lastPage;
     public readonly string $nextPageUrl;
     public readonly string $prevPageUrl;
 
     #[OA\Property(property: 'total', type: 'integer')]
-    #[OA\Property(property: 'pageSize', type: 'integer')]
-    #[OA\Property(property: 'currentPage', type: 'integer')]
-    #[OA\Property(property: 'lastPage', type: 'integer')]
-    #[OA\Property(property: 'nextPageUrl', type: 'string')]
-    #[OA\Property(property: 'prevPageUrl', type: 'string')]
+    #[OA\Property(property: 'page_size', type: 'integer')]
+    #[OA\Property(property: 'current_page', type: 'integer')]
+    #[OA\Property(property: 'last_page', type: 'integer')]
+    #[OA\Property(property: 'next_page_url', type: 'string')]
+    #[OA\Property(property: 'prev_page_url', type: 'string')]
     #[OA\Property(property: 'data', type: 'array', items: new OA\Items(
         //ref: '#/components/schemas/Game'
         oneOf: [
@@ -33,22 +33,6 @@ class PaginatedResponse
         $this->lastPage = ceil($this->total / $this->pageSize);
         $this->nextPageUrl = $this->getPageUrl(1);
         $this->prevPageUrl = $this->getPageUrl(-1);
-    }
-
-    /**
-     * @return array
-     */
-    public function getContents(): array
-    {
-        return [
-            'total'         => $this->total,
-            'page_size'     => $this->pageSize,
-            'current_page'  => $this->currentPage,
-            'last_page'     => $this->lastPage,
-            'next_page_url' => $this->nextPageUrl,
-            'prev_page_url' => $this->prevPageUrl,
-            'data'          => $this->data
-        ];
     }
 
     /**
